# bmo-stack

./: .dockerignore  .eslintrc.cjs  .gitattributes  .gitignore  .pre-commit-config.yaml  .terraform-version  .tflint.hcl  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  apps-export.txt  deploy-infrastructure.sh  docker-compose.dev.yml  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.changeset/: config.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  (+5 more)
docker/: api.Dockerfile  env-orchestrator.Dockerfile  ingress-router.Dockerfile  terminal-gateway.Dockerfile  web.Dockerfile
docs/: OAUTH_SETUP.md  README.md  architecture.md  auth-migration.md  deployment.md  development.md
scripts/: build-and-push-demo-images.sh  check-godaddy-auth.sh  check-node-version.mjs  clean-repo.mjs  cleanup-subscriptions.mjs  ecs-deploy-service-image.sh  ecs-run-migrations.sh  export-apps-to-txt.mjs  migrate-plans-to-lago.ts  migrate-to-lago.ts  sync-godaddy-delegation.sh  sync-plans-to-providers.mjs  validate-plans.mjs
templates/: README.md
templates/fastapi-api/: .gitignore  README.md  pyproject.toml  pytholit.toml
templates/fastapi-api/src/fastapi_api/: app.py  main.py
templates/fastapi-api/src/fastapi_api/config/: settings.py
templates/fastapi-api/src/fastapi_api/lib/: server.py
templates/fastapi-api/src/fastapi_api/routes/: health.py  root.py
templates/fastapi-api/src/fastapi_api/services/: status_service.py
(+893 files in other folders)
