[project]
name = "fastapi-api"
version = "0.1.0"
description = "Modern FastAPI starter for Pytholit"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.42.0",
]

[project.scripts]
fastapi-api = "fastapi_api.main:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
